--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,1 +1,540 @@
-// This is the main .scss entry file
+a,
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+q,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video {
+    margin: 0;
+    padding: 0;
+    vertical-align: baseline;
+    border: 0;
+    font: inherit;
+    font-size: 100%;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:after,
+blockquote:before {
+    content: '';
+    content: none;
+}
+
+q:after,
+q:before {
+    content: '';
+    content: none;
+}
+
+table {
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+@font-face {
+    font-family: 'Operator Mono Medium';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Operator Mono Medium'), url('../fonts/OperatorMono-Medium.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Operator Mono Medium Italic';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Operator Mono Medium Italic'), url('../fonts/OperatorMono-MediumItalic.woff') format('woff');
+}
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'Operator Mono Medium', Monaco, Consolas, monospace;
+}
+
+h2 {
+    text-transform: uppercase;
+    font-size: 24px;
+    color: #fff;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 4px;
+    text-decoration: none;
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    h2 {
+        font-size: 19px;
+    }
+}
+
+.green {
+    font-size: 16px;
+    color: #00ec99;
+    bottom: 0px;
+    letter-spacing: 2px;
+}
+
+@media screen and (min-width: 768px) {
+    .green {
+        font-size: 19px;
+        letter-spacing: 4px;
+    }
+}
+
+a,
+p,
+span {
+    font-family: 'Operator Mono Medium Italic', Monaco, Consolas, monospace;
+    font-size: 15px;
+    color: #fc5027;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    a,
+    p,
+    span {
+        font-size: 17px;
+    }
+}
+
+.no-flexbox .main {
+    margin-top: 200px;
+}
+
+.no-flexbox .social li {
+    margin: 0px 20px;
+}
+
+html {
+    height: 98%;
+}
+
+body {
+    height: 100%;
+    background: #092528;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        padding: 10px;
+    }
+}
+
+main {
+    height: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -moz-align-items: center;
+    align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    justify-content: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+}
+
+section.main {
+    top: 0;
+    width: 100%;
+    max-width: 645px;
+    margin: auto;
+    padding: 10px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-flow: column;
+    -moz-flex-flow: column;
+    -ms-flex-flow: column;
+    flex-flow: column;
+}
+
+#logo img {
+    left: -20px;
+    width: 90%;
+    max-width: 800px;
+    margin-bottom: 10px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+@media screen and (min-width: 1020px) {
+    #logo img {
+        width: 100%;
+    }
+}
+
+@-webkit-keyframes fade-out {
+    0% {
+        opacity: 0;
+        top: 30px;
+    }
+    100% {
+        opacity: 1;
+        top: 0px;
+    }
+}
+
+@-moz-keyframes fade-out {
+    0% {
+        opacity: 0;
+        top: 30px;
+    }
+    100% {
+        opacity: 1;
+        top: 0px;
+    }
+}
+
+@-ms-keyframes fade-out {
+    0% {
+        opacity: 0;
+        top: 30px;
+    }
+    100% {
+        opacity: 1;
+        top: 0px;
+    }
+}
+
+@-o-keyframes fade-out {
+    0% {
+        opacity: 0;
+        top: 30px;
+    }
+    100% {
+        opacity: 1;
+        top: 0px;
+    }
+}
+
+@keyframes fade-out {
+    0% {
+        opacity: 0;
+        top: 30px;
+    }
+    100% {
+        opacity: 1;
+        top: 0px;
+    }
+}
+
+.flex-1 {
+    -webkit-box-ordinal-group: 2;
+    -webkit-order: 1;
+    -moz-order: 1;
+    -ms-flex-order: 1;
+    order: 1;
+    position: relative;
+    top: 0px;
+    opacity: 0;
+    -webkit-animation-delay: 0s;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-name: fade-out;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-delay: 0s;
+    -moz-animation-duration: 1s;
+    -moz-animation-name: fade-out;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-delay: 0s;
+    -o-animation-duration: 1s;
+    -o-animation-name: fade-out;
+    -o-animation-fill-mode: forwards;
+    animation-delay: 0s;
+    animation-duration: 1s;
+    animation-name: fade-out;
+    animation-fill-mode: forwards;
+}
+
+.flex-2 {
+    position: relative;
+    top: 0px;
+    margin: 30px 0;
+    opacity: 0;
+    -webkit-animation-delay: .3s;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-name: fade-out;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-delay: .3s;
+    -moz-animation-duration: 1s;
+    -moz-animation-name: fade-out;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-delay: .3s;
+    -o-animation-duration: 1s;
+    -o-animation-name: fade-out;
+    -o-animation-fill-mode: forwards;
+    animation-delay: .3s;
+    animation-duration: 1s;
+    animation-name: fade-out;
+    animation-fill-mode: forwards;
+    -webkit-box-ordinal-group: 4;
+    -webkit-order: 3;
+    -moz-order: 3;
+    -ms-flex-order: 3;
+    order: 3;
+}
+
+@media screen and (min-width: 768px) {
+    .flex-2 {
+        margin: 10px 0;
+        -webkit-box-ordinal-group: 3;
+        -webkit-order: 2;
+        -moz-order: 2;
+        -ms-flex-order: 2;
+        order: 2;
+    }
+}
+
+@media screen and (min-width: 1020px) {
+    .flex-2 {
+        margin: 15px 0;
+    }
+}
+
+.flex-3 {
+    position: relative;
+    top: 0px;
+    margin-bottom: 0;
+    opacity: 0;
+    -webkit-animation-delay: .6s;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-name: fade-out;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-delay: .6s;
+    -moz-animation-duration: 1s;
+    -moz-animation-name: fade-out;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-delay: .6s;
+    -o-animation-duration: 1s;
+    -o-animation-name: fade-out;
+    -o-animation-fill-mode: forwards;
+    animation-delay: .6s;
+    animation-duration: 1s;
+    animation-name: fade-out;
+    animation-fill-mode: forwards;
+    -webkit-box-ordinal-group: 5;
+    -webkit-order: 4;
+    -moz-order: 4;
+    -ms-flex-order: 4;
+    order: 4;
+}
+
+@media screen and (min-width: 768px) {
+    .flex-3 {
+        margin: 15px 0;
+        -webkit-box-ordinal-group: 4;
+        -webkit-order: 3;
+        -moz-order: 3;
+        -ms-flex-order: 3;
+        order: 3;
+    }
+}
+
+.flex-4 {
+    position: relative;
+    top: 0px;
+    opacity: 0;
+    margin: 15px 0;
+    -webkit-animation-delay: .9s;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-name: fade-out;
+    -webkit-animation-fill-mode: forwards;
+    -moz-animation-delay: .9s;
+    -moz-animation-duration: 1s;
+    -moz-animation-name: fade-out;
+    -moz-animation-fill-mode: forwards;
+    -o-animation-delay: .9s;
+    -o-animation-duration: 1s;
+    -o-animation-name: fade-out;
+    -o-animation-fill-mode: forwards;
+    animation-delay: .9s;
+    animation-duration: 1s;
+    animation-name: fade-out;
+    animation-fill-mode: forwards;
+    -webkit-box-ordinal-group: 3;
+    -webkit-order: 2;
+    -moz-order: 2;
+    -ms-flex-order: 2;
+    order: 2;
+}
+
+@media screen and (min-width: 768px) {
+    .flex-4 {
+        -webkit-box-ordinal-group: 5;
+        -webkit-order: 4;
+        -moz-order: 4;
+        -ms-flex-order: 4;
+        order: 4;
+    }
+}
+
+.social ul {
+    display: block;
+    list-style: none;
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .social ul {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-justify-content: space-between;
+        -moz-justify-content: space-between;
+        justify-content: space-between;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+    }
+}
+
+.social li {
+    display: block;
+    padding: 15px 0;
+}
+
+@media screen and (min-width: 1020px) {
+    .social li {
+        display: inline-block;
+        padding: 15px 0;
+    }
+}
+
+a,
+li a h2 {
+    text-decoration: none;
+    color: #fc5027;
+    -webkit-transition: all 0.5s ease .2s ease-in-out;
+    -moz-transition: all 0.5s ease .2s ease-in-out;
+    -ms-transition: all 0.5s ease .2s ease-in-out;
+    -o-transition: all 0.5s ease .2s ease-in-out;
+    transition: all 0.5s ease .2s ease-in-out;
+}
+
+a[href^=mail] {
+    color: #de8a00;
+}
+
+a:hover,
+li a h2:hover {
+    color: #00ec99;
+}
+
