--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -53,10 +53,9 @@ ul {
 h2 {
     font-family: 'Operator Mono Medium', Monaco, Consolas, monospace;
     text-transform: uppercase;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 600;
     line-height: 20px;
-    letter-spacing: 4px;
     text-decoration: none;
     text-align: center;
 }
@@ -64,11 +63,12 @@ h2 {
 @media screen and (min-width: 768px) {
     h2 {
         font-size: 19px;
+        letter-spacing: 4px;
     }
 }
 
 .flex-3 > h2 {
-    font-size: 16px;
+    font-size: 19px;
     color: $lightGreen;
     bottom: 0px;
     letter-spacing: 2px;
@@ -76,8 +76,7 @@ h2 {
 
 @media screen and (min-width: 768px) {
     .flex-3 > h2 {
-        font-size: 19px;
-        letter-spacing: 4px;
+        font-size: 22px;
     }
 }
 
@@ -85,11 +84,9 @@ p,
 a,
 span {
     font-family: 'Operator Mono Medium Italic', Monaco, Consolas, monospace;
-    font-size: 15px;
+    font-size: 18px;
     color: $red;
-    font-weight: 100;
     line-height: 20px;
-    letter-spacing: 0.5px;
     text-align: center;
 }
 
@@ -97,7 +94,7 @@ span {
     p,
     a,
     span {
-        font-size: 17px;
+        font-size: 20px;
     }
 }
 
@@ -110,12 +107,6 @@ body {
     background: $darkGreen;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-@media screen and (min-width: 768px) {
-    body {
-        padding: 10px;
-    }
 }
 
 main {
@@ -136,19 +127,11 @@ section.main {
 }
 
 #logo img {
-    left: -20px;
-    width: 90%;
-    max-width: 800px;
-    margin-bottom: 10px;
+    width: 100%;
+    max-width: 645px;
     display: block;
     margin-right: auto;
     margin-left: auto;
-}
-
-@media screen and (min-width: 1020px) {
-    #logo img {
-        width: 100%;
-    }
 }
 
 @keyframes fade-out {
@@ -176,7 +159,7 @@ section.main {
 .flex-2 {
     position: relative;
     top: 0px;
-    margin: 30px 0;
+    margin-top: 30px;
     opacity: 0;
     animation-delay: .3s;
     animation-duration: 1s;
@@ -187,21 +170,14 @@ section.main {
 
 @media screen and (min-width: 768px) {
     .flex-2 {
-        margin: 10px 0;
         order: 2;
-    }
-}
-
-@media screen and (min-width: 1020px) {
-    .flex-2 {
-        margin: 15px 0;
     }
 }
 
 .flex-3 {
     position: relative;
     top: 0px;
-    margin-bottom: 0;
+    margin-top: 30px;
     opacity: 0;
     animation-delay: .6s;
     animation-duration: 1s;
@@ -212,7 +188,6 @@ section.main {
 
 @media screen and (min-width: 768px) {
     .flex-3 {
-        margin: 15px 0;
         order: 3;
     }
 }
@@ -221,18 +196,12 @@ section.main {
     position: relative;
     top: 0px;
     opacity: 0;
-    margin: 45px 0;
+    margin-top: 45px;
     animation-delay: .9s;
     animation-duration: 1s;
     animation-name: fade-out;
     animation-fill-mode: forwards;
     order: 4;
-}
-
-@media screen and (min-width: 768px) {
-    .flex-4 {
-        order: 4;
-    }
 }
 
 .social ul {
@@ -250,7 +219,7 @@ section.main {
 
 .social li {
     display: block;
-    padding: 15px 0;
+    padding: 10px 0;
 }
 
 @media screen and (min-width: 1020px) {
