--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,15 @@
 @import 'variables';
+@import 'fonts';
+@import 'animation';
+
+html,
+body {
+    height: 100%;
+    background: $darkGreen;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    line-height: 1;
+}
 
 html,
 body,
@@ -19,44 +30,26 @@ a {
     font-size: 100%;
 }
 
-body {
-    line-height: 1;
+main {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-ol,
-ul {
-    list-style: none;
-}
-
-@font-face {
-    font-family: 'Operator Mono Medium';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Operator Mono Medium'),
-    url('../fonts/OperatorMono-Medium.woff') format('woff'),
-    url('../fonts/OperatorMono-Medium.eot') format('eot'),
-    url('../fonts/OperatorMono-Medium.ttf') format('truetype'),
-    url('../fonts/OperatorMono-Medium.otf') format('opentype');
-}
-
-@font-face {
-    font-family: 'Operator Mono Medium Italic';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Operator Mono Medium Italic'),
-    url('../fonts/OperatorMono-MediumItalic.woff') format('woff'),
-    url('../fonts/OperatorMono-MediumItalic.eot') format('eot'),
-    url('../fonts/OperatorMono-MediumItalic.ttf') format('truetype'),
-    url('../fonts/OperatorMono-MediumItalic.otf') format('opentype');
+section {
+    width: 100%;
+    max-width: 645px;
+    padding: 10px;
+    display: flex;
+    flex-flow: column;
 }
 
 h2 {
     font-family: 'Operator Mono Medium', Monaco, Consolas, monospace;
     text-transform: uppercase;
     font-size: 22px;
-    font-weight: 600;
     line-height: 20px;
-    text-decoration: none;
     text-align: center;
 }
 
@@ -67,22 +60,8 @@ h2 {
     }
 }
 
-.flex-3 > h2 {
-    font-size: 19px;
-    color: $lightGreen;
-    bottom: 0px;
-    letter-spacing: 2px;
-}
-
-@media screen and (min-width: 768px) {
-    .flex-3 > h2 {
-        font-size: 22px;
-    }
-}
-
 p,
-a,
-span {
+a {
     font-family: 'Operator Mono Medium Italic', Monaco, Consolas, monospace;
     font-size: 18px;
     color: $red;
@@ -92,140 +71,8 @@ span {
 
 @media screen and (min-width: 768px) {
     p,
-    a,
-    span {
+    a {
         font-size: 20px;
-    }
-}
-
-html {
-    height: 98%;
-}
-
-body {
-    height: 100%;
-    background: $darkGreen;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-main {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-section.main {
-    top: 0;
-    width: 100%;
-    max-width: 645px;
-    margin: auto;
-    padding: 10px;
-    display: flex;
-    flex-flow: column;
-}
-
-#logo img {
-    width: 100%;
-    max-width: 645px;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-@keyframes fade-out {
-    0% {
-        opacity: 0;
-        top: 30px;
-    }
-    100% {
-        opacity: 1;
-        top: 0px;
-    }
-}
-
-.flex-1 {
-    order: 1;
-    position: relative;
-    top: 0px;
-    opacity: 0;
-    animation-delay: 0s;
-    animation-duration: 1s;
-    animation-name: fade-out;
-    animation-fill-mode: forwards;
-}
-
-.flex-2 {
-    position: relative;
-    top: 0px;
-    margin-top: 30px;
-    opacity: 0;
-    animation-delay: .3s;
-    animation-duration: 1s;
-    animation-name: fade-out;
-    animation-fill-mode: forwards;
-    order: 3;
-}
-
-@media screen and (min-width: 768px) {
-    .flex-2 {
-        order: 2;
-    }
-}
-
-.flex-3 {
-    position: relative;
-    top: 0px;
-    margin-top: 30px;
-    opacity: 0;
-    animation-delay: .6s;
-    animation-duration: 1s;
-    animation-name: fade-out;
-    animation-fill-mode: forwards;
-    order: 4;
-}
-
-@media screen and (min-width: 768px) {
-    .flex-3 {
-        order: 3;
-    }
-}
-
-.flex-4 {
-    position: relative;
-    top: 0px;
-    opacity: 0;
-    margin-top: 45px;
-    animation-delay: .9s;
-    animation-duration: 1s;
-    animation-name: fade-out;
-    animation-fill-mode: forwards;
-    order: 4;
-}
-
-.social ul {
-    display: block;
-    list-style: none;
-    text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-    .social ul {
-        display: flex;
-        justify-content: space-between;
-    }
-}
-
-.social li {
-    display: block;
-    padding: 10px 0;
-}
-
-@media screen and (min-width: 1020px) {
-    .social li {
-        display: inline-block;
-        padding: 15px 0;
     }
 }
 
@@ -236,12 +83,93 @@ li a h2 {
     transition: all 0.5s ease .2s ease-in-out;
 }
 
-a[href^=mail] {
-    color: $yellow;
-}
-
 a:hover,
 li a h2:hover {
     color: $lightGreen;
 }
 
+/* Flex Containers */
+.flex-1 {
+    position: relative;
+    opacity: 0;
+    animation-delay: 0s;
+    animation-duration: 1s;
+    animation-name: fade-in;
+    animation-fill-mode: forwards;
+    img {
+        width: 100%;
+        max-width: 645px;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+    }
+}
+
+.flex-2 {
+    margin-top: 30px;
+    position: relative;
+    opacity: 0;
+    animation-delay: .3s;
+    animation-duration: 1s;
+    animation-name: fade-in;
+    animation-fill-mode: forwards;
+    ul {
+        display: block;
+        list-style: none;
+        text-align: center;
+        li {
+            display: block;
+            padding: 10px 0;
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .flex-2 ul {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+@media screen and (min-width: 1020px) {
+    .flex-2 li {
+        padding: 15px 0;
+    }
+}
+
+.flex-3 {
+    margin-top: 30px;
+    position: relative;
+    opacity: 0;
+    animation-delay: .6s;
+    animation-duration: 1s;
+    animation-name: fade-in;
+    animation-fill-mode: forwards;
+    h2 {
+        font-size: 19px;
+        color: $lightGreen;
+        bottom: 0px;
+        letter-spacing: 2px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .flex-3 {
+        h2 {
+            font-size: 22px;
+        }
+    }
+}
+
+.flex-4 {
+    margin-top: 45px;
+    position: relative;
+    opacity: 0;
+    animation-delay: .9s;
+    animation-duration: 1s;
+    animation-name: fade-in;
+    animation-fill-mode: forwards;
+    a {
+        color: $yellow;
+    }
+}
