--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -19,3 +19,39 @@
     url('../fonts/OperatorMono-MediumItalic.ttf') format('truetype'),
     url('../fonts/OperatorMono-MediumItalic.otf') format('opentype');
 }
+
+@font-face {
+    font-family: 'Font Awesome 5 Brands';
+    font-style: normal;
+    font-weight: normal;
+    font-display: auto;
+    src: url('../fonts/fa-brands-400.eot');
+    src: url('../fonts/fa-brands-400.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/fa-brands-400.woff2') format('woff2'),
+    url('../fonts/fa-brands-400.woff') format('woff'),
+    url('../fonts/fa-brands-400.ttf') format('truetype'),
+    url('../fonts/fa-brands-400.svg#fontawesome') format('svg');
+}
+
+.fab {
+    font-family: 'Font Awesome 5 Brands';
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+}
+
+.fa-github:before {
+    content: '\f09b';
+}
+
+.fa-stack-overflow:before {
+    content: '\f16c';
+}
+
+.fa-twitter:before {
+    content: '\f099';
+}
