Clear console warning

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -71,9 +71,8 @@ a {
     text-decoration: none;
 }
 
-li a h2 {
+li > a > h2 {
     color: $red;
-    transition: all 0.5s ease .2s ease-in-out;
 }
 
 p > a:hover,
@@ -117,15 +116,9 @@ li > a > h2:hover {
 }
 
 @media screen and (min-width: 768px) {
-    .flex-2 ul {
+    .flex-2 > ul {
         display: flex;
         justify-content: space-between;
-    }
-}
-
-@media screen and (min-width: 1020px) {
-    .flex-2 li {
-        padding: 15px 0;
     }
 }
 
@@ -138,13 +131,13 @@ li > a > h2:hover {
     animation-name: fade-in;
     animation-fill-mode: forwards;
     h2 {
-        font-size: 18px;
+        font-size: 16px;
         color: $lightGreen;
     }
 }
 
 @media screen and (min-width: 768px) {
-    .flex-3 h2 {
+    .flex-3 > h2 {
         font-size: 22px;
     }
 }
